published data に変更 + postman にて存在しない日付を指定していたので修正
