# db/schema.rb
@@ -14,7 +14,7 @@ ActiveRecord::Schema[7.0].define(version: 2022_05_15_141037) do
   create_table "books", charset: "utf8mb4", collation: "utf8mb4_0900_ai_ci", force: :cascade do |t|
     t.string "title", null: false
     t.string "description", null: false
-    t.date "published", null: false
+    t.date "published_date", null: false, comment: "出版日"
     t.boolean "rent", default: false, comment: "借りられているか"
     t.date "return_date", comment: "返却日"
     t.datetime "created_at", null: false
